--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
+    "multer": "^1.4.5-lts.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.5",
     "nodemon": "^3.1.9",
     "prisma": "^6.2.1",
