--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "multer": "^1.4.5-lts.1",
+    "puppeteer": "^24.1.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.5",
+    "@types/puppeteer": "^5.4.7",
     "@types/supertest": "^6.0.2",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
