--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dayjs-plugin-utc": "^0.1.2",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
